# hypersonic-cfd-solver

./: .gitignore  BLUEPRINT.txt  Makefile  README.md  docker-compose.yml
.github/workflows/: build-gpu-kernels.yml  test-solvers.yml
cfd_visualizer/: Dockerfile  index.html  package-lock.json  package.json
cfd_visualizer/src/: App.tsx  styles.css  types.ts  vite-env.d.ts
cfd_visualizer/src/components/: ParameterControls.tsx  ProbeData.tsx  SimulationCanvas.tsx
cfd_visualizer/src/shaders/: heatmap.frag
compute_kernel/: CMakeLists.txt
compute_kernel/include/: cuda_helper.h
compute_kernel/src/: main.cpp
compute_kernel/src/kernels/: boundary_conditions.cu  euler_solver.cu  flux_splitting.cu
simulation_api/: Dockerfile  requirements.txt
simulation_api/app/: main.py
simulation_api/app/core/: cuda_interface.py
simulation_api/app/mesh/: generator.py
simulation_api/tests/: test_conservation.py
